--- a/Section 1/Section 1 Exercises.Rmd
+++ b/Section 1/Section 1 Exercises.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Exercise 1 - reformatting spectra dataset 
+## Exercise 1 - reformatting spectra dataset
 
 Load all the `.jdx` files of the `fusel alcohols` dataset into individual variables. Then:
 
@@ -29,14 +29,14 @@ $$
 C_7H_{16} + O_2 \rightarrow products
 $$
 
-The rate constant of this reaction follows the Arrhenius Equation with a pre-exponential factor of `5.25*10^-7` cm3/mol\*s and an activation energy of `181` kJ/mol ([NIST](https://kinetics.nist.gov/kinetics/Detail?id=1975SHA/DEN872:4)). Calculate the rate constant at: 410K, 420K and 430K.
+The rate constant of this reaction follows the Arrhenius Equation with a pre-exponential factor of `5.25*10^-7` cm3/mol\*s and an activation energy of `181` kJ/mol ([NIST](https://kinetics.nist.gov/kinetics/Detail?id=1975SHA/DEN872:4)). Calculate the rate constant at 410K, 420K and 430K.
 
-## Exercise 3 - calculating density with CEoS
+## Exercise 3 - estimate IR spectra of mixtures
 
-The density of carbon dioxide is well approximated by the Peng-Robinson EoS. The critical point is 304.2K and 7.38 MPa, and the acentric factor is 0.224 (table 2-106 of "Perry's Chemical Engineers Handbook" 9th edition).
+Load the `.rds` file you created in exercise 1 and isolate the spectra y-axis of the compounds propanol, pentanol and isobutyl alcohol into a single matrix (one compound per column).
 
-Calculate the compressibility factor and the density of CO2 under the conditions:
+1.   Generate a (uniform) random matrix containing 5 combinations of concentrations (with values between 0.2 and 1) for the 3 selected compounds.
 
-1.  300K, and pressures 0.1 to 1.0 MPa (with steps of 0.1MPa)
+2.  Use Beer-Lambert's Law to calculate the approximate spectra of each mixture in the previously generated matrix.
 
-2.  450K and pressures 8.0, 9.0 and 10 MPa
+3.  Save the newly generated spectra as a `.csv` file.
